--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "simple-gatsby-blog",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Un starter pour débuter la création d'un blog",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "DevDurable <mathews.kyle@gmail.com>",
   "dependencies": {
     "@ant-design/icons": "^4.1.0",
     "gatsby": "^2.21.21",
@@ -22,9 +22,14 @@
     "netlify-cms": "^2.10.48",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
+    "react-native": "^0.62.2",
     "typeface-fira-sans": "0.0.75"
+  },
+  "peerDependencies": {
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   },
   "devDependencies": {
     "prettier": "2.0.5"
