--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,7 +17,7 @@ collections:
         label: "Page d'accueil"
         name: "index"
         fields:
-          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "index"}
+          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "index-page"}
           - { label: "Titre", name: "title", widget: "string" }
           - { label: "Image", name: "image", widget: image }
           - { label: "Heading", name: "heading", widget: "string" }
@@ -28,7 +28,7 @@ collections:
         label: "À propos"
         name: "about"
         fields:
-          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "about"}
+          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "about-page"}
           - { label: "Titre", name: "title", widget: "string" }
           - { label: "Image", name: "image", widget: image }
           - { label: "Heading", name: "heading", widget: "string" }
