--- a/package.json
+++ b/package.json
@@ -6,15 +6,25 @@
   "author": "DevDurable <mathews.kyle@gmail.com>",
   "dependencies": {
     "@ant-design/icons": "^4.1.0",
+    "@raae/gatsby-remark-oembed": "^0.1.1",
+    "babel-plugin-styled-components": "^1.10.7",
+    "bootstrap": "^4.5.0",
     "gatsby": "^2.21.21",
+    "gatsby-background-image": "^1.1.1",
     "gatsby-image": "^2.4.3",
     "gatsby-plugin-antd": "^2.2.0",
+    "gatsby-plugin-catch-links": "^2.3.2",
     "gatsby-plugin-less": "^3.2.1",
     "gatsby-plugin-manifest": "^2.4.2",
     "gatsby-plugin-netlify-cms": "^4.3.1",
     "gatsby-plugin-offline": "^3.2.1",
     "gatsby-plugin-react-helmet": "^3.3.1",
     "gatsby-plugin-sharp": "^2.6.2",
+    "gatsby-plugin-styled-components": "^3.3.2",
+    "gatsby-remark-component": "^1.1.3",
+    "gatsby-remark-external-links": "0.0.4",
+    "gatsby-remark-images": "^3.3.7",
+    "gatsby-remark-responsive-iframe": "^2.4.3",
     "gatsby-source-filesystem": "^2.3.1",
     "gatsby-transformer-remark": "^2.8.7",
     "gatsby-transformer-sharp": "^2.5.2",
@@ -22,9 +32,13 @@
     "netlify-cms": "^2.10.48",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
+    "react-hot-loader": "^4.12.21",
     "react-native": "^0.62.2",
+    "rehype-react": "^5.0.1",
+    "styled-components": "^5.1.0",
     "typeface-fira-sans": "0.0.75"
   },
   "peerDependencies": {
