--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@raae/gatsby-remark-oembed": "^0.1.1",
     "babel-plugin-styled-components": "^1.10.7",
     "bootstrap": "^4.5.0",
-    "gatsby": "^2.21.21",
+    "gatsby": "^2.22.10",
     "gatsby-background-image": "^1.1.1",
     "gatsby-image": "^2.4.3",
     "gatsby-plugin-antd": "^2.2.0",
@@ -24,6 +24,7 @@
     "gatsby-remark-component": "^1.1.3",
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-images": "^3.3.7",
+    "gatsby-remark-relative-images": "^0.3.0",
     "gatsby-remark-responsive-iframe": "^2.4.3",
     "gatsby-source-filesystem": "^2.3.1",
     "gatsby-transformer-remark": "^2.8.7",
