--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,8 +2,8 @@ backend:
   name: github
   repo: ThibaudLk/simple-gatsby-blog
 
-media_folder: static/assets
-public_folder: assets
+media_folder: images
+public_folder: /images
 publish_mode: editorial_workflow
 
 collections:
@@ -28,7 +28,7 @@ collections:
         label: "À propos"
         name: "about"
         fields:
-          - {label: "Slug", name: "slug", widget: "hidden", default: "about"}
+          - { label: "Slug", name: "slug", widget: "hidden", default: "about"}
           - { label: "Titre", name: "title", widget: "string" }
           - { label: "Image", name: "image", widget: image }
           - { label: "Heading", name: "heading", widget: "string" }
