--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-transformer-sharp": "^2.5.2",
     "less": "^3.11.1",
     "netlify-cms": "^2.10.48",
+    "netlify-cms-app": "^2.12.13",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
