--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,9 +2,8 @@ backend:
   name: github
   repo: ThibaudLk/simple-gatsby-blog
 
-media_folder: images
+media_folder: src/images
 public_folder: /images
-publish_mode: editorial_workflow
 
 collections:
 
